--- a/academic/templates/academic/home.html
+++ b/academic/templates/academic/home.html
@@ -1,4 +1,3 @@
-{% load static %}
 <html>
 <link rel="shortcut icon" href="/static/image/img.png" />
 <head>
@@ -8,14 +7,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static "css/home.css" %}">
+    <link rel="stylesheet" href="/static/css/home.css">
 
 </head>
 <body>
 <div class="menu-container">
     <ul class="menu clearfix">
-        <li><a href="/login-aluno/"><img src='{% static "image/aluno.png" %}' width="15" height="15" >Aluno</a>
-        <li><a href="/login-professor/"><img src= '{% static "image/professor.png" %}' width="15" height="15" >Professor</a>
+        <li><a href="/login-aluno/"><img src="/image/aluno.png" width="15" height="15">Aluno</a>
+        <li><a href="/login-professor/"><img src="/image/professor.png" width="15" height="15">Professor</a>
     </ul>
 
 
@@ -33,7 +32,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="/static/image/professor.png" alt="missao">
+      <img src="/image/professor.png" alt="missao">
       <div class="carousel-caption" >
         <h3  style="font-size:30px; color:blue;">Missão!</h3>
         <p style="color:black;">Atender à demanda por um Ensino de Qualidade e contribuindo na formação de pessoas capazes de viver plenamente com consciência crítica e
@@ -42,7 +41,7 @@
     </div>
 
     <div class="item">
-      <img src="/static/image/aluno.png" alt="Visão">
+      <img src="/image/aluno.png" alt="Visão">
       <div class="carousel-caption">
         <h3  style="font-size:30px; color:blue;">Visão</h3>
         <p style="color:black;">Consolidar-se como uma Instituição de referência nacional no processo de ensino e aprendizagem com métodos inovadores e modernos, atendendo as necessidades do mercado de trabalho e da sociedade.</p>
@@ -50,7 +49,7 @@
     </div>
 
     <div class="item">
-        <img src="/static/image/aluna.png" alt="Valores">
+        <img src="/image/aluna.png" alt="Valores">
       <div class="carousel-caption">
         <h3 style="font-size:30px; color:blue;">Valores</h3>
         <p style="color:black;">Foco nos estudantes, nos professores e nos colaboradores;
