--- a/academic/templates/academic/login-professor.html
+++ b/academic/templates/academic/login-professor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<link rel="shortcut icon" href="/static/image/img.png" />
+<link rel="shortcut icon" href="/image/img.png" />
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
 
 </head>
  <body class="d-flex flex-column" >
-     <a href="/home/"><img src="/static/image/voltar.png" width="30" height="30"/></a>
+     <a href="/home/"><img src="/image/voltar.png" width="30" height="30"/></a>
 <div class="img">
     <img src="/static/image/img.png" width="150" height="100"> <br>
 </div>
