--- a/academic/templates/academic/portal-aluno.html
+++ b/academic/templates/academic/portal-aluno.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/static/css/portal-aluno.css"/>
 </head>
 <body>
-<img src="/static/image/img.png" width="150" height="120">
+<img src="/image/img.png" width="150" height="120">
 <div id="form">
     <form action="/situacao-aluno/"  method="POST">{% csrf_token %}
     <div class="menu-container">
