--- a/academic/templates/academic/portal-professor.html
+++ b/academic/templates/academic/portal-professor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<link rel="shortcut icon" href="/static/image/img.png" />
+<link rel="shortcut icon" href="/image/img.png" />
 <head>
     <title>D&D-Educacional</title>
      <!-- Bootstrap Core CSS -->
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="/static/css/portal-professor.css"/>
 </head>
 <body>
-<img src="/static/image/img.png" width="150" height="120">
+<img src="/image/img.png" width="150" height="120">
 <div id="form">
 <form action="/registro-notas/"  method="POST">{% csrf_token %}
      <div class="menu-container">
     <ul class="menu clearfix">
         <li><button type="submit" class="btn btn-info">Consultar notas e Frequência</button></li>
-        <a class="image-right" href="/login-professor/"><img src="/static/image/exit.png" width="15" height="15"/></a>
+        <a class="image-right" href="/login-professor/"><img src="/image/exit.png" width="15" height="15"/></a>
     </ul>
 </div>
         <div class="container-al">
