--- a/academic/templates/academic/registro-notas.html
+++ b/academic/templates/academic/registro-notas.html
@@ -1,6 +1,6 @@
  {% block content %}
 <html lang="pt-br">
-<link rel="shortcut icon" href="/static/image/img.png" />
+<link rel="shortcut icon" href="/image/img.png" />
 <head>
     <title>D&D-Educacional</title>
 
@@ -16,13 +16,13 @@
   <link href="/static/css/css/stylish-portfolio.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/portal-professor.css"/>
 </head>
-<img src="/static/image/img.png" width="150" height="120">
+<img src="/image/img.png" width="150" height="120">
 
 <div class="menu-container">
 
     <ul class="menu clearfix">
 
-        <a class="image-right" href="/portal-professor/{{cpf_prof}}/"><img src="/static/image/voltar.png" width="20"
+        <a class="image-right" href="/portal-professor/{{cpf_prof}}/"><img src="/image/voltar.png" width="20"
                                                               height="20"/></a>
     </ul>
 
