--- a/academic/templates/academic/situacao-aluno.html
+++ b/academic/templates/academic/situacao-aluno.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<link rel="shortcut icon" href="/static/image/img.png" />
+<link rel="shortcut icon" href="/image/img.png" />
 <head>
     <title>D&D-Educacional</title>
 
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<img src="/static/image/img.png" width="150" height="120">
+<img src="/image/img.png" width="150" height="120">
 
  <div class="menu-container">
 
