--- a/academic/templates/academic/login-aluno.html
+++ b/academic/templates/academic/login-aluno.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
+{% load static %}
 <html lang="pt-br">
-<link rel="shortcut icon" href="/static/image/img.png" />
+<link rel="shortcut icon" href="/image/img.png" />
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,9 +24,9 @@
 </head>
 
 <body class="d-flex flex-column">
-<a href="/home/"><img src="/static/image/voltar.png" width="30" height="30"/></a>
+<a href="/home/"><img src="/image/voltar.png" width="30" height="30"/></a>
 <div class="img">
-    <img src="/static/image/img.png" width="150" height="100"> <br>
+    <img src="/image/img.png" width="150" height="100"> <br>
 </div>
 <div class="conteiner">
 
