--- a/academic/templates/academic/lancamento-nota.html
+++ b/academic/templates/academic/lancamento-nota.html
@@ -28,7 +28,7 @@
                                            readonly></td>
                     <td scope="row"><input  style="border: 1px solid #ffffff;" type="text"
                                            value="{{s.cpf.nome}}" readonly></td>
-                    <td scope="row" ><input  style="border: 1px solid #ffffff; width:60px;" type="text" name="nota"
+                    <td scope="row" ><input  style="border: 1px solid #ffffff; width:60px;" type="number" step="0.01" name="nota"
                                            value="{{s.nota}}"
                                            readonly></td>
                     <td scope="row" ><input  style="border: 1px solid #ffffff;width:60px;" type="text" name="freq"
