--- a/academic/templates/academic/boletim.html
+++ b/academic/templates/academic/boletim.html
@@ -10,7 +10,7 @@
     <p>Cnpj : 77.865.203/0001-75 Fone:(81)3434-3434</p>
 </div>
 <div style="text-align: right">
-    <img src="\Users\Deyvid\Desktop\Project_version02\academic\static\academic\image\img.png" width="150" height="100">
+    <img src="\Users\Deyvid\Desktop\DjangoProject\academic\static\academic\image\img.png" width="150" height="100">
 </div><br>
 
 <h1 style=" text-align: center; font-size:30px; ">Histórico Escolar</h1>
