--- a/academic/templates/academic/registro-notas.html
+++ b/academic/templates/academic/registro-notas.html
@@ -16,7 +16,15 @@
   <link href="/static/css/css/stylish-portfolio.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/portal-professor.css"/>
 </head>
-<img src="/image/img.png" width="150" height="120">
+<table>
+  <tr>
+    <td><img src="/image/img.png" width="150" height="120"></td>
+
+    <td><strong><p>Avenida Brasil, 532 - Jaboatão-PE - CEP: 40285-460 </p>
+    <p>Cnpj : 77.865.203/0001-75 Fone:(81)3434-3434</p></strong></td>
+  </tr>
+
+</table>
 
 <div class="menu-container">
 
