--- a/academic/templates/academic/portal-professor.html
+++ b/academic/templates/academic/portal-professor.html
@@ -16,7 +16,15 @@
     <link rel="stylesheet" href="/static/css/portal-professor.css"/>
 </head>
 <body>
-<img src="/image/img.png" width="150" height="120">
+<table>
+  <tr>
+    <td><img src="/image/img.png" width="150" height="120"></td>
+
+    <td><strong><p>Avenida Brasil, 532 - Jaboatão-PE - CEP: 40285-460 </p>
+    <p>Cnpj : 77.865.203/0001-75 Fone:(81)3434-3434</p></strong></td>
+  </tr>
+
+</table>
 <div id="form">
 <form action="/registro-notas/"  method="POST">{% csrf_token %}
      <div class="menu-container">
