--- a/academic/templates/academic/situacao-aluno.html
+++ b/academic/templates/academic/situacao-aluno.html
@@ -18,7 +18,15 @@
 </head>
 <body>
 
-<img src="/image/img.png" width="150" height="120">
+<table>
+  <tr>
+    <td><img src="/image/img.png" width="150" height="120"></td>
+
+    <td><strong><p>Avenida Brasil, 532 - Jaboatão-PE - CEP: 40285-460 </p>
+    <p>Cnpj : 77.865.203/0001-75 Fone:(81)3434-3434</p></strong></td>
+  </tr>
+
+</table>
 
  <div class="menu-container">
 
