--- a/academic/static/academic/css/home.css
+++ b/academic/static/academic/css/home.css
@@ -6,6 +6,7 @@ body {
   background-attachment: fixed;
   background-size: 100%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 
 }
 
