--- a/academic/static/academic/css/login-professor.css
+++ b/academic/static/academic/css/login-professor.css
@@ -5,6 +5,7 @@ body {
   background-attachment: fixed;
   background-size: 100%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 
 }
 
