--- a/academic/templates/academic/delete-notas.html
+++ b/academic/templates/academic/delete-notas.html
@@ -20,11 +20,12 @@
 
 
 {% for s in sit%}
+                <input type="hidden" name="id" value="{{s.id}}" readonly>
              <tbody>
             <tr>
 
-                <td scope="row"><input  style="border: 1px solid #ffffff; width:70px" type="text" name="cpf" value="{{s.cpf.cpf}}"
-                                       readonly></td>
+                <td scope="row"><input  style="border: 1px solid #ffffff; width:100px" type="text" name="cpf"
+                                           value="{{s.cpf.cpf}}">
                 <td scope="row"><input style="border: 1px solid #ffffff;" type="text" name="nome" value="{{s.cpf.nome}}" readonly></td>
                 <td scope="row"><input style="border: 1px solid #ffffff; width:35px;" type="text" name="nota" value="{{s.nota}}"
                                        readonly></td>
