--- a/academic/templates/academic/login-aluno.html
+++ b/academic/templates/academic/login-aluno.html
@@ -8,10 +8,8 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Bootstrap Core CSS -->
-    <link
-            href="/static/css/vendor/bootstrap/css/bootstrap.min.css"
-            rel="stylesheet"
-    />
+    <link   href="/static/css/vendor/bootstrap/css/bootstrap.min.css"
+            rel="stylesheet"  />
 
     <!-- Custom Fonts -->
     <link
@@ -24,10 +22,7 @@
             rel="stylesheet"
             type="text/css"
     />
-    <link
-            href="/static/css/vendor/simple-line-icons/css/simple-line-icons.css"
-            rel="stylesheet"
-    />
+    <link   href="/static/css/vendor/simple-line-icons/css/simple-line-icons.css"     rel="stylesheet"  />
 
     <!-- Custom CSS -->
     <link href="/static/css/css/stylish-portfolio.min.css" rel="stylesheet"/>
