--- a/academic/templates/academic/login-aluno.html
+++ b/academic/templates/academic/login-aluno.html
@@ -60,7 +60,7 @@
             {% if messages %} {% for message in messages %}
             <div class="alert alert-danger">{{ message }}</div>
             {% endfor %} {% endif %}
-            <button type="submit" class="btn btn-info">Login</button>
+            <button type="submit" class="btn btn-info">Login<img src="/image/conecte-se.png"></button>
         </form>
     </div>
 </div>
