--- a/academic/templates/academic/login-professor.html
+++ b/academic/templates/academic/login-professor.html
@@ -40,7 +40,7 @@
             <div class="alert alert-danger">{{ message }}</div>
             {% endfor %}
             {% endif %}
-            <button type="submit" class="btn btn-info">Login</button>
+            <button type="submit" class="btn btn-info">Login<img src="/image/conecte-se.png"></button>
         </form>
     </div>
 </div>
